# FEFM_cpp_3sem

./: README.md
Chapter_2/seminar_1/04_cmake/02_hello_world/: CMakeLists.txt  main.cpp
Chapter_2/seminar_1/04_cmake/02_hello_world/src/: main.cpp
Chapter_2/seminar_1/04_cmake/03_simple_lib/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp
Chapter_2/seminar_1/04_cmake/04_structured_lib/: CMakeLists.txt  main.cpp
Chapter_2/seminar_1/04_cmake/04_structured_lib/src/math/: CMakeLists.txt
Chapter_2/seminar_1/04_cmake/04_structured_lib/src/phys/: CMakeLists.txt  energy.cpp  energy.hpp
Chapter_2/seminar_1/04_cmake/05_private_public/: CMakeLists.txt  main.cpp
Chapter_2/seminar_1/04_cmake/06_external_lib/: CMakeLists.txt  main.cpp
Chapter_2/seminar_1/04_cmake/06_external_lib/include/: hello.hpp
Chapter_2/seminar_1/04_cmake/07_find_package/: CMakeLists.txt  main.cpp
Chapter_2/seminar_1/04_cmake/08_manually_find_package/: CMakeLists.txt  basic_test_of_gmsh.cpp
Chapter_2/seminar_10/: 01_hello_world.cpp  02_num_set_threads.cpp  03_master_thread.cpp  04_parallel_increment.cpp  05_parallel_increment_real.cpp  06_single_section.cpp  07_private_and_shared.cpp  08_private_shared.cpp  09_data_dependencies.cpp  10_fibonnachi_parallel.cpp  11_fibonnachi_parralel.cpp  12_trhead_pool.cpp  13_thread_pool.cpp  14_mpi_hello_world.cpp  15_mpi_communication.cpp  16_hybrid.cpp
labs/Lab 1/: interface_list.cpp  interface_vector.cpp  list_profiler.cpp  sort_interface.cpp  vector_profiler.cpp
labs/Lab1/: interface_list.cpp  interface_stack.cpp
labs/Lab2/: interface_list.cpp  interface_vector.cpp  list_profiler.cpp  matrix.cpp  vector_profiler.cpp
labs/Lab3/: interface.cpp
seminal_8/move_semantics/: 00_copy_assingnment_porblem  00_copy_assingnment_porblem.cpp  01_returning_problem  01_returning_problem.cpp  02_technical_terms.cpp  03_example.cpp  04_move_operations  04_move_operations.cpp  05_move.cpp  06_move.cpp  07_swap_problem  07_swap_problem.cpp  08_swap_solved  08_swap_solved.cpp  09_empty.cpp  10_rule_of_zero.cpp  a.out
seminal_8/soft_templates/: 01_problem_to_solve.cpp  02_max_template.cpp  03_type_info  04_point_template.cpp  05_vector_template.cpp  06_sort_interface.cpp
seminar_1/01_hello_world/: 01_HelloWorld.cpp  a.out
seminar_1/02_basic/: .09_for_cycle.cpp.swp  01_sizeof_fundamental.cpp  02_sizeof_modified.cpp  03_const.cpp  03_variables_init_assign.cpp  04_input_output.cpp  05_other_types.cpp  07_operations_precedence.cpp  08_increments.cpp  09_for_syntaxis.cpp  10_while_syntaxis.cpp  11_ifelse_syntaxis.cpp  12_switch_syntaxis.cpp  13_integer_in_memory.cpp  13_task.txt  a.out
seminar_10/inheritance/: 00_c_polygons  00_c_polygons.cpp  01_polygons.cpp  02_methods_problem  02_methods_problem.cpp  03_methods_solution  03_methods_solution.cpp  04_dynamic_poly.cpp  04_methods_but_normal  04_methods_but_normal.cpp  05_forgotten_virtual  05_forgotten_virtual.cpp  06_constructors  06_constructors.cpp  07_destructors  07_destructors.cpp  08_virtual_destructor  08_virtual_destructor.cpp  09_pure_virtual_method.cpp  10_always_virtual_destructor.cpp  11_override_and_overload  11_override_and_overload.cpp  12_override.cpp  13_overloaded_virtual_methods  13_overloaded_virtual_methods.cpp  14_protected  14_protected.cpp  15_all_type_inheritance.cpp  21_exapmle_of_a_cut.cpp
seminar_11/inheritance/: 01_virtual_destructor  02_interfaces.cpp  03_multiple_inheretance  04_romb  04_romb.cpp  05_virtual_inheritance  06_another_trouble  06_another_trouble.cpp  08_typeinfo.cpp  11_dynamic_casts_for_refs.cpp
seminar_11/warming_up/: 01_correct_print_for_list.cpp
seminar_12/basic_exceptions/: 01_terminate  01_terminate.cpp  02_throw  02_throw.cpp  03_catch  03_catch.cpp  04_inheritance  04_inheritance.cpp  05_catch_by_value  05_catch_by_value.cpp  06_slicing  06_slicing.cpp  07_slicing  07_slicing.cpp  08_catch_right_order.cpp  09_standart_exception  09_standart_exception.cpp  10_std_excpetion_interface.cpp  666_virtual_assign_operator.cpp
seminar_12/dynamic_cast/: 10_cast_everywhere  10_cast_everywhere.cpp
seminar_12/exceptions_philosophy/: 01_new_exception.cpp  02_copy_ctor.cpp  03_right_copy_ctor.cpp  04_assing.cpp  05_right_assign.cpp  06_very_right_assign.cpp  exception_safety_guide.txt  guaranties.txt
seminar_13/: README.md
seminar_13/intro/: 03_conditional_compilation.cpp  04_macro.cpp  05_marco_and_cond_compilation.cpp  06_comp_error.cpp
seminar_13/task/: README.md
seminar_2/arrays/: 01_arrays.cpp  02_2d_array.cpp  03_constant_size.cpp  04_going_aboard.cpp  05_big_mistake.cpp  06_dynamic_failure.cpp  07_dynamic_arrays.cpp  08_array_to_func.cpp  a.out  bubble_sort_fixed.cpp
seminar_2/functions/: 01_simple_func.cpp  02_global_var.cpp  03_local.cpp  04_local_global.cpp  05_covered_variables.cpp  06_field_of_visibility.cpp  07_propotype.cpp  08_full_prototype.cpp  a.out
seminar_2/structures/: 01_structure_type.cpp  02_structure_alignment.cpp
seminar_3/pointers/: .leak_disaster.cpp.swp  01_dynamic_failure.cpp  02_big_array_in_stack.cpp  03_dynamic_arrays.cpp  04_pointer_simple_example.cpp  05_pointer_type.cpp  06_pointer_to_dynamic_array.cpp  07_array_is_a_pointer.cpp  08_array_is_not_a_pointer.cpp  09_pointer_arithmetics.cpp  10_array_going_across.cpp  11_fucn_pointer.cpp  12_fucn_local_stack.cpp  13.cpp  14_passing_arguments.cpp  15_array_to_function.cpp  16_array_to_function.cpp  16_arrow_operator.cpp  a.out  bubble_sort_dynamic.cpp  garbage_in_stack.cpp  leak_disaster.cpp  leak_disaster_solved.cpp
seminar_3/structures/: 01_structure_alignment.cpp  02_embeeded_structures.cpp  03_array_of_structures.cpp  a.out
seminar_4/: a.out
seminar_4/double_pointers/: .02_easy_swap_arrays.cpp.swp  01_swap_arrays.cpp  02_easy_swap_arrays.cpp  03_bug_in_swap_arrays.cpp  04_expanding_the_array.cpp  05_double_arrays.cpp  06_double_arrays_as_single_array.cpp  07_double_array_as_pointer_to_pointer.cpp  1.cpp  a.out
seminar_4/examples_to_be_aware_of/: garbage_in_stack.cpp
seminar_7/: a.out  new_delete_warming_up.cpp
seminar_with_bug_three_rule/: links.txt
(+343 files in other folders)
